log.log
Traceback (most recent call last):
  File "/home/pi/scripts/MagicEightBot.py", line 23, in <module>
    with open('responses.json') as file:
FileNotFoundError: [Errno 2] No such file or directory: 'responses.json'
Killed
28/02/2021 03:20:08 -- We have logged in as MagicEightBot#9088
28/02/2021 03:21:00 -- Replying to question
28/02/2021 03:22:23 -- Replying to question
28/02/2021 03:27:22 -- Replying to question
28/02/2021 03:27:29 -- Replying to question
28/02/2021 16:39:41 -- Replying to question
28/02/2021 17:40:29 -- Replying to question
28/02/2021 17:40:34 -- Replying to question
28/02/2021 17:40:37 -- Replying to question
28/02/2021 17:40:39 -- Replying to question
28/02/2021 17:40:42 -- Replying to question
28/02/2021 17:40:45 -- Replying to question
28/02/2021 17:40:51 -- Replying to question
28/02/2021 17:40:55 -- Replying to question
01/03/2021 20:13:51 -- Replying to question
01/03/2021 20:28:38 -- Replying to question
01/03/2021 22:13:46 -- Replying to question
01/03/2021 22:14:09 -- Replying to question
01/03/2021 22:14:15 -- Replying to question
01/03/2021 22:14:24 -- Replying to question
01/03/2021 22:14:26 -- Replying to question
01/03/2021 22:14:29 -- Replying to question
01/03/2021 22:14:36 -- Replying to question
01/03/2021 22:14:39 -- Replying to question
01/03/2021 22:14:46 -- Replying to question
01/03/2021 22:14:50 -- Replying to question
01/03/2021 22:14:55 -- Replying to question
01/03/2021 22:14:59 -- Replying to question
01/03/2021 22:15:13 -- Replying to question
01/03/2021 22:15:19 -- Replying to question
01/03/2021 22:15:42 -- Replying to question
01/03/2021 22:15:51 -- Replying to question
01/03/2021 22:16:01 -- Replying to question
01/03/2021 22:16:29 -- Replying to question
01/03/2021 22:16:51 -- Replying to question
01/03/2021 22:16:51 -- Replying to question
01/03/2021 22:17:03 -- Replying to question
01/03/2021 22:17:07 -- Replying to question
01/03/2021 22:17:11 -- Replying to question
01/03/2021 22:17:12 -- Replying to question
01/03/2021 22:17:30 -- Replying to question
01/03/2021 22:17:53 -- Replying to question
01/03/2021 22:17:58 -- Replying to question
01/03/2021 22:18:02 -- Replying to question
01/03/2021 22:18:02 -- Replying to question
01/03/2021 22:18:08 -- Replying to question
01/03/2021 22:18:10 -- Replying to question
01/03/2021 22:18:11 -- Replying to question
01/03/2021 22:18:12 -- Replying to question
01/03/2021 22:18:13 -- Replying to question
01/03/2021 22:18:14 -- Replying to question
01/03/2021 22:18:39 -- Replying to question
01/03/2021 22:18:49 -- Replying to question
01/03/2021 22:18:55 -- Replying to question
01/03/2021 22:19:01 -- Replying to question
01/03/2021 22:22:14 -- Replying to question
01/03/2021 22:22:24 -- Replying to question
01/03/2021 22:22:38 -- Replying to question
01/03/2021 22:23:14 -- Replying to question
01/03/2021 22:23:25 -- Replying to question
01/03/2021 22:23:32 -- Replying to question
01/03/2021 22:23:38 -- Replying to question
01/03/2021 22:23:46 -- Replying to question
01/03/2021 22:23:52 -- Replying to question
01/03/2021 22:23:58 -- Replying to question
01/03/2021 22:24:15 -- Replying to question
01/03/2021 22:24:19 -- Replying to question
01/03/2021 22:24:20 -- Replying to question
01/03/2021 22:24:20 -- Replying to question
01/03/2021 22:24:20 -- Replying to question
01/03/2021 22:24:21 -- Replying to question
01/03/2021 22:24:22 -- Replying to question
01/03/2021 22:24:22 -- Replying to question
01/03/2021 22:24:23 -- Replying to question
01/03/2021 22:24:23 -- Replying to question
01/03/2021 22:24:24 -- Replying to question
01/03/2021 22:24:31 -- Replying to question
01/03/2021 22:24:40 -- Replying to question
01/03/2021 22:24:40 -- Replying to question
01/03/2021 22:24:41 -- Replying to question
01/03/2021 22:24:42 -- Replying to question
01/03/2021 22:24:42 -- Replying to question
01/03/2021 22:24:42 -- Replying to question
01/03/2021 22:24:43 -- Replying to question
01/03/2021 22:24:46 -- Replying to question
01/03/2021 22:24:47 -- Replying to question
01/03/2021 22:24:50 -- Replying to question
01/03/2021 22:24:50 -- Replying to question
01/03/2021 22:24:53 -- Replying to question
01/03/2021 22:25:08 -- Replying to question
01/03/2021 22:25:30 -- Replying to question
01/03/2021 22:25:35 -- Replying to question
01/03/2021 22:25:38 -- Replying to question
01/03/2021 22:25:54 -- Replying to question
01/03/2021 22:26:11 -- Replying to question
01/03/2021 22:26:16 -- Replying to question
01/03/2021 22:27:20 -- Replying to question
01/03/2021 22:27:33 -- Replying to question
01/03/2021 22:27:45 -- Replying to question
01/03/2021 22:27:45 -- Replying to question
01/03/2021 22:27:55 -- Replying to question
01/03/2021 22:28:27 -- Replying to question
01/03/2021 22:28:50 -- Replying to question
01/03/2021 22:29:07 -- Replying to question
01/03/2021 22:29:15 -- Replying to question
01/03/2021 22:29:27 -- Replying to question
01/03/2021 22:29:55 -- Replying to question
01/03/2021 22:30:32 -- Replying to question
01/03/2021 22:30:56 -- Replying to question
01/03/2021 22:36:05 -- Replying to question
01/03/2021 22:36:10 -- Replying to question
01/03/2021 23:44:50 -- Client exiting
  File "/home/pi/scripts/MagicEightBot/main.py", line 44
    await messageReceived.channel.send(random.choice(magic8Responses))
    ^
SyntaxError: 'await' outside async function
Ignoring exception in on_message
Traceback (most recent call last):
  File "/usr/local/lib/python3.7/dist-packages/discord/client.py", line 343, in _run_event
    await coro(*args, **kwargs)
  File "/home/pi/scripts/MagicEightBot/main.py", line 72, in on_message
    await messageReceived.channel.send(random.choice(responses))
NameError: name 'messageReceived' is not defined
01/03/2021 23:59:24 -- We have logged in as MagicEightBot#9088
02/03/2021 00:03:50 -- Client exiting
02/03/2021 00:04:40 -- We have logged in as MagicEightBot#9088
02/03/2021 00:08:04 -- Client exiting
02/03/2021 00:08:54 -- We have logged in as MagicEightBot#9088
02/03/2021 00:14:32 -- Replying to question
02/03/2021 00:14:45 -- Replying to question
02/03/2021 00:15:07 -- Replying to question
Traceback (most recent call last):
  File "/home/pi/scripts/MagicEightBot/main.py", line 77, in <module>
    client.run(TOKEN)
  File "/usr/local/lib/python3.7/dist-packages/discord/client.py", line 718, in run
    return future.result()
  File "/usr/local/lib/python3.7/dist-packages/discord/client.py", line 697, in runner
    await self.start(*args, **kwargs)
  File "/usr/local/lib/python3.7/dist-packages/discord/client.py", line 661, in start
    await self.connect(reconnect=reconnect)
  File "/usr/local/lib/python3.7/dist-packages/discord/client.py", line 561, in connect
    await self.ws.poll_event()
  File "/usr/local/lib/python3.7/dist-packages/discord/gateway.py", line 587, in poll_event
    raise ConnectionClosed(self.socket, shard_id=self.shard_id, code=code) from None
discord.errors.ConnectionClosed: Shard ID None WebSocket closed with 4004
Traceback (most recent call last):
  File "/home/pi/scripts/MagicEightBot/main.py", line 77, in <module>
    client.run(os.getenv('TOKEN'))
NameError: name 'os' is not defined
